WebPage: Update index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
+<h1>AGROFINDING</h1>
 <img src="logo.png" alt="logo" />
+<h4>VERSIONES</h4>
+<a href="source/agrofinding-0.1-unstable.zip">Agrofinding v0.1</a>
 <h1>EN CONSTRUCCION</h1>
